website/websites/u64q/code/templates.1.pyston.log

 Fri, 30 Oct 2020 20:46:49 GMT

COMMAND LINE:
 /usr/bin/pyston templates.pyston 1000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "templates.pyston", line 35
    print res
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(res)?
